// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`profile 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": "2022-08-30T11:06:31.762Z",
  "deleted_at": null,
  "description_search": null,
  "email": "test@test.io",
  "email_text": null,
  "email_verified_at": null,
  "expiry_date": null,
  "first_name": "test_name",
  "followers": 0,
  "followings": 0,
  "id": "c6c2fd78-dae6-40ca-b684-ad1429f0448f",
  "impact_score": 0,
  "language": null,
  "last_name": "last_name",
  "mission": null,
  "mobile_country_code": null,
  "my_conversation": null,
  "password_expired": false,
  "phone": null,
  "phone_verified_at": null,
  "remember_token": null,
  "search_tsv": "'last':5 'name':4,6 'test':1,3 'usernam':2",
  "skills": null,
  "social_causes": null,
  "status": "INACTIVE",
  "updated_at": "2022-08-30T11:06:31.762Z",
  "username": "test_username",
  "view_as": null,
  "wallet_address": null,
}
`;

exports[`profile 2`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": "2022-08-30T11:06:31.762Z",
  "deleted_at": null,
  "description_search": null,
  "email": "test2@test.io",
  "email_text": null,
  "email_verified_at": null,
  "expiry_date": null,
  "first_name": "test_name_2",
  "followers": 0,
  "followings": 0,
  "id": "0029bc16-0a1c-4223-b9f5-d945f2bb810e",
  "impact_score": 0,
  "language": null,
  "last_name": "last_name_2",
  "mission": null,
  "mobile_country_code": null,
  "my_conversation": null,
  "password_expired": false,
  "phone": null,
  "phone_verified_at": null,
  "remember_token": null,
  "search_tsv": "'2':3,6,9 'last':7 'name':5,8 'test':1,4 'usernam':2",
  "skills": null,
  "social_causes": null,
  "status": "INACTIVE",
  "updated_at": "2022-08-30T11:06:31.762Z",
  "username": "test_username_2",
  "view_as": null,
  "wallet_address": null,
}
`;

exports[`register 1`] = `
{
  "error": ""email" must be a valid email",
}
`;
